--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,10 +1,10 @@
 {
-  "name": "__MSG_appName__",
-  "short_name": "__MSG_appShortName__",
-  "description": "__MSG_appDescription__",
+  "name": "たまに熱盛が出てしまうchrome extension",
+  "short_name": "たまに熱盛が出てしまう",
+  "description": "動画を再生していると1%の確率で熱盛と表示されてしまうchrome extension です。",
   "version": "0.0.0",
   "manifest_version": 2,
-  "default_locale": "en",
+  "default_locale": "ja",
   "icons": {
     "16": "images/icon-16.png",
     "128": "images/icon-128.png"
