--- a/app/manifest.json
+++ b/app/manifest.json
@@ -2,17 +2,12 @@
   "name": "たまに熱盛が出てしまうchrome extension",
   "short_name": "たまに熱盛が出てしまう",
   "description": "動画を再生していると1%の確率で熱盛と表示されてしまうchrome extension です。",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "manifest_version": 2,
-  "default_locale": "ja",
+  "default_locale": "en",
   "icons": {
     "16": "images/icon-16.png",
     "128": "images/icon-128.png"
-  },
-  "background": {
-    "scripts": [
-      "scripts/background.js"
-    ]
   },
   "content_scripts": [
     {
@@ -29,5 +24,11 @@
       "run_at": "document_end",
       "all_frames": false
     }
+  ],
+  "permissions": [
+    "activeTab"
+  ],
+  "web_accessible_resources": [
+    "images/atsumori.png", "styles/shadow.css"
   ]
 }
