--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "require-dir": "0.x.x",
     "ts-loader": "^2.3.4",
     "tslint": "^5.7.0",
+    "typescript": "^2.4.2",
     "vinyl-named": "1.x.x",
     "webpack": "2.x.x",
     "webpack-stream": "3.x.x",
