--- a/app/manifest.json
+++ b/app/manifest.json
@@ -29,6 +29,6 @@
     "activeTab"
   ],
   "web_accessible_resources": [
-    "images/atsumori.png", "styles/shadow.css"
+    "images/atsumori.png", "styles/shadow.css", "assets/atsumori.mp3"
   ]
 }
