--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,8 +1,8 @@
 {
-  "name": "たまに熱盛が出てしまうchrome extension",
+  "name": "たまに熱盛が出てしまうextension",
   "short_name": "たまに熱盛が出てしまう",
-  "description": "動画を再生していると1%の確率で熱盛と表示されてしまうchrome extension です。",
-  "version": "0.1.0",
+  "description": "動画を再生していると10%の確率で熱盛と表示されてしまうchrome extension です。",
+  "version": "0.1.1",
   "manifest_version": 2,
   "default_locale": "en",
   "icons": {
